--- a/canjear.html
+++ b/canjear.html
@@ -155,7 +155,7 @@
   <div id="qrFullscreen" class="qr-fullscreen" aria-hidden="true">
     <button id="qrFsClose" class="qr-fullscreen__close" type="button">Cerrar</button>
     <img id="qrFsImg" class="qr-fullscreen__img" alt="Cupón QR">
-    <div class="qr-fullscreen__hint">Acerca o aleja la pantalla; el QR se adapta a tu dispositivo.</div>
+   <div class="qr-fullscreen__hint">Presenta este QR al Gerente para recibir tu cortesia.</div>
   </div>
 
   <script>
@@ -463,3 +463,4 @@
   </script>
 </body>
 </html>
+
