--- a/index.html
+++ b/index.html
@@ -12,7 +12,13 @@
     <div class="form-card">
       <h1>Iniciar Sesión</h1>
 
-      <input type="text" id="emailOrPhone" placeholder="Correo o Teléfono (+521... o 10 dígitos)" autocomplete="username" />
+      <div class="field-group">
+        <input type="text" id="emailOrPhone" placeholder="Correo o teléfono" autocomplete="username" />
+        <span class="tooltip">❓
+          <span class="tooltiptext">Puedes ingresar tu correo electrónico o número de teléfono registrado.</span>
+        </span>
+      </div>
+
       <input type="password" id="password" placeholder="Contraseña" autocomplete="current-password" />
       <button id="btnLogin">Entrar</button>
 
@@ -33,12 +39,11 @@
   }
   </script>
 
-  <!-- Firebase (compat) -->
-<script src="https://www.gstatic.com/firebasejs/10.12.2/firebase-app-compat.js"></script>
-<script src="https://www.gstatic.com/firebasejs/10.12.2/firebase-auth-compat.js"></script>
-<script src="https://www.gstatic.com/firebasejs/10.12.2/firebase-database-compat.js"></script>
-<script src="firebase-config.js"></script>
-<script src="auth.js"></script>
-
+  <!-- Firebase -->
+  <script src="https://www.gstatic.com/firebasejs/10.12.2/firebase-app-compat.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/10.12.2/firebase-auth-compat.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/10.12.2/firebase-database-compat.js"></script>
+  <script src="firebase-config.js"></script>
+  <script src="auth.js"></script>
 </body>
 </html>
