--- a/register.html
+++ b/register.html
@@ -12,7 +12,6 @@
     <div class="form-card">
       <h1>Crear Cuenta</h1>
 
-      <!-- Nombre -->
       <div class="field-group">
         <input type="text" id="regName" placeholder="Nombre completo" autocomplete="name" />
         <span class="tooltip">❓
@@ -20,7 +19,6 @@
         </span>
       </div>
 
-      <!-- Correo -->
       <div class="field-group">
         <input type="email" id="regEmail" placeholder="Correo electrónico" autocomplete="email" />
         <span class="tooltip">❓
@@ -28,7 +26,6 @@
         </span>
       </div>
 
-      <!-- Teléfono -->
       <div class="field-group">
         <input type="tel" id="regPhone" placeholder="Teléfono (10 dígitos, opcional)" inputmode="numeric" />
         <span class="tooltip">❓
@@ -36,7 +33,6 @@
         </span>
       </div>
 
-      <!-- Contraseña -->
       <div class="field-group">
         <input type="password" id="regPassword" placeholder="Contraseña" autocomplete="new-password" />
         <span class="tooltip">❓
@@ -52,7 +48,7 @@
     </div>
   </div>
 
-  <!-- Firebase (compat) -->
+  <!-- Firebase -->
   <script src="https://www.gstatic.com/firebasejs/10.12.2/firebase-app-compat.js"></script>
   <script src="https://www.gstatic.com/firebasejs/10.12.2/firebase-auth-compat.js"></script>
   <script src="https://www.gstatic.com/firebasejs/10.12.2/firebase-database-compat.js"></script>
