--- a/register.html
+++ b/register.html
@@ -12,6 +12,7 @@
     <div class="form-card">
       <h1>Crear Cuenta</h1>
 
+      <!-- Nombre -->
       <div class="field-group">
         <input type="text" id="regName" placeholder="Nombre completo" autocomplete="name" />
         <span class="tooltip">❓
@@ -19,6 +20,7 @@
         </span>
       </div>
 
+      <!-- Correo -->
       <div class="field-group">
         <input type="email" id="regEmail" placeholder="Correo electrónico" autocomplete="email" />
         <span class="tooltip">❓
@@ -26,6 +28,7 @@
         </span>
       </div>
 
+      <!-- Teléfono -->
       <div class="field-group">
         <input type="tel" id="regPhone" placeholder="Teléfono (10 dígitos, opcional)" inputmode="numeric" />
         <span class="tooltip">❓
@@ -33,6 +36,7 @@
         </span>
       </div>
 
+      <!-- Contraseña -->
       <div class="field-group">
         <input type="password" id="regPassword" placeholder="Contraseña" autocomplete="new-password" />
         <span class="tooltip">❓
@@ -48,7 +52,27 @@
     </div>
   </div>
 
-  <!-- Firebase -->
+   <script>
+  // Soporte para tooltips táctiles (móviles)
+  document.querySelectorAll('.tooltip').forEach(tip => {
+    tip.addEventListener('click', e => {
+      e.stopPropagation(); // evita cerrar inmediatamente
+      // Quita la clase activa de los demás
+      document.querySelectorAll('.tooltip.active').forEach(t => {
+        if (t !== tip) t.classList.remove('active');
+      });
+      // Alterna visibilidad
+      tip.classList.toggle('active');
+    });
+  });
+
+  // Cierra cualquier tooltip al tocar fuera
+  document.addEventListener('click', () => {
+    document.querySelectorAll('.tooltip.active').forEach(t => t.classList.remove('active'));
+  });
+  </script>
+
+  <!-- Firebase (compat) -->
   <script src="https://www.gstatic.com/firebasejs/10.12.2/firebase-app-compat.js"></script>
   <script src="https://www.gstatic.com/firebasejs/10.12.2/firebase-auth-compat.js"></script>
   <script src="https://www.gstatic.com/firebasejs/10.12.2/firebase-database-compat.js"></script>
