--- a/index.html
+++ b/index.html
@@ -32,14 +32,26 @@
   </div>
 
   <script>
-  if ('serviceWorker' in navigator) {
-    window.addEventListener('load', () => {
-      navigator.serviceWorker.register('/sw.js').catch(console.error);
+  // Soporte para tooltips táctiles (móviles)
+  document.querySelectorAll('.tooltip').forEach(tip => {
+    tip.addEventListener('click', e => {
+      e.stopPropagation(); // evita cerrar inmediatamente
+      // Quita la clase activa de los demás
+      document.querySelectorAll('.tooltip.active').forEach(t => {
+        if (t !== tip) t.classList.remove('active');
+      });
+      // Alterna visibilidad
+      tip.classList.toggle('active');
     });
-  }
+  });
+
+  // Cierra cualquier tooltip al tocar fuera
+  document.addEventListener('click', () => {
+    document.querySelectorAll('.tooltip.active').forEach(t => t.classList.remove('active'));
+  });
   </script>
 
-  <!-- Firebase -->
+  <!-- Firebase (compat) -->
   <script src="https://www.gstatic.com/firebasejs/10.12.2/firebase-app-compat.js"></script>
   <script src="https://www.gstatic.com/firebasejs/10.12.2/firebase-auth-compat.js"></script>
   <script src="https://www.gstatic.com/firebasejs/10.12.2/firebase-database-compat.js"></script>
